# ComputerGame

./: .gitignore  LICENSE  README.md
8-puzzle/: a.out  b.out  in.txt  puzzle_8.cpp  puzzle_for_cp.cpp  random_board.cpp
EinStein_Würfelt_Nicht/: CMakeLists.txt  MyAI.cpp  MyAI.h  README.md  main.cpp
EinStein_Würfelt_Nicht/Board/: board.cpp  board.h
EinStein_Würfelt_Nicht/Player/HYPlayer/: HYPlayer.cpp  HYPlayer.h
EinStein_Würfelt_Nicht/Player/PlayerAlphaBeta/: playerAlphaBeta.cpp  playerAlphaBeta.h
EinStein_Würfelt_Nicht/Player/PlayerBase/: playerBase.h
Modified_6×7_EinStein_Würfelt_Nicht/: CMakeLists.txt  README.md  main.cpp
Modified_6×7_EinStein_Würfelt_Nicht/Board/: board.cpp  board.h
Modified_6×7_EinStein_Würfelt_Nicht/Game/: game.cpp  game.h
Modified_6×7_EinStein_Würfelt_Nicht/Player/PlayerAlphaBeta/: playerAlphaBeta.cpp  playerAlphaBeta.h
Modified_6×7_EinStein_Würfelt_Nicht/Player/PlayerBase/: playerBase.cpp  playerBase.h
Modified_6×7_EinStein_Würfelt_Nicht/Player/PlayerHuman/: playerHuman.cpp  playerHuman.h
Modified_6×7_EinStein_Würfelt_Nicht/Player/PlayerPVS/: playerPVS.cpp  playerPVS.h
Modified_6×7_EinStein_Würfelt_Nicht/Player/PlayerRandom/: playerRandom.cpp  playerRandom.h
